# MeshSliceTricks

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  GLMesh.h  GLSLShader.h  Mesh.cpp  MeshIO.h  README.md  SliceVisualUI.h  main.cpp
shaders/: slice.f.glsl  slice.g.glsl  slice.v.glsl
